Fix crash when quitting apps

BUG: 319137
REVIEW: 110382